dust off Lecture 1.4

--- a/main.bib
+++ b/main.bib
@@ -475,6 +475,21 @@ MRREVIEWER = {Paul G. Goerss},
 MRREVIEWER = {T. tom Dieck},
 }
 
+@book {RavenelGreenBook,
+    AUTHOR = {Ravenel, Douglas C.},
+     TITLE = {Complex cobordism and stable homotopy groups of spheres},
+    SERIES = {Pure and Applied Mathematics},
+    VOLUME = {121},
+ PUBLISHER = {Academic Press Inc.},
+   ADDRESS = {Orlando, FL},
+      YEAR = {1986},
+     PAGES = {xx+413},
+      ISBN = {0-12-583430-6; 0-12-583431-4},
+   MRCLASS = {55-02 (55Qxx 57-02)},
+  MRNUMBER = {860042 (87j:55003)},
+MRREVIEWER = {Joseph Neisendorfer},
+}
+
 @article {RavenelLocalizationWRTPeriodic,
     AUTHOR = {Ravenel, Douglas C.},
      TITLE = {Localization with respect to certain periodic homology
