--- a/mo.tex
+++ b/mo.tex
@@ -522,7 +522,7 @@ At the other extreme, we can pick the extremely nondegenerate case $X = \S$, pic
 
 \section{The unoriented bordism ring}
 
-Our goal today is to use the results of the previous lectures to make a calculation of $\pi_* MO$, the unoriented bordism ring.  The Adams spectral sequence converging to this has signature \[H^*_{\mathrm{gp}}(\InternalAut(\G_a); H\F_2P_0(MO)) \Rightarrow \pi_* MO,\] and so we see that we need to understand $H\F_2P_0(MO)$, together with its comodule structure over the dual Steenrod algebra.
+Our goal today is to use the results of the previous lectures to make a calculation of $\pi_* MO$, the unoriented bordism ring.  The Adams spectral sequence converging to this has signature \[H^*_{\mathrm{gp}}(\InternalAut(\G_a); \widetilde{H\F_2P_0(MO)}) \Rightarrow \pi_* MO,\] and so we see that we need to understand $H\F_2P_0(MO)$, together with its comodule structure over the dual Steenrod algebra.
 
 Our first step toward this is the following calculation:
 \begin{lemma}
@@ -586,36 +586,36 @@ Given a ring map $MO \to H\F_2P$, we can restrict it along the inclusion $MO(1) 
 \end{proof}
 
 \begin{corollary}
-There is an isomorphism $\Spec H\F_2P_0 MO \cong \Coord(\RP^\infty_{H\F_2P})$.
+There is an $\InternalAut(\G_a)$--equivariant isomorphism of schemes between $\Spec H\F_2P_0 MO$ and $\Coord_1(\RP^\infty_{H\F_2P})$, the scheme of coordinate functions on $\RP^\infty_{H\F_2P} \to \A^1$ which restrict to the canonical identification of tangent spaces $\RP^1_{H\F_2P} = \A^{1,(1)}$.
 \end{corollary}
 \begin{proof}
-The method of the previous proof is to exhibit a isomorphism between these schemes.  To learn that this isomorphism is $\InternalAut(\G_a)$--equivariant, you need only know that the image of the map $BO(1) \to BO$ on mod--$2$ homology generates $H\F_2P_0 BO$ as an algebra.\todo{This is clumsily stated.}
+The method of the previous proof is to exhibit a isomorphism between these schemes.  To learn that this isomorphism is equivariant for $\InternalAut(\G_a)$, you need only know that the image of the map $BO(1) \to BO$ on mod--$2$ homology generates $H\F_2P_0 BO$ as an algebra.\todo{This is clumsily stated.}
 \end{proof}
 
 We are now ready to analyze the group cohomology of $\InternalAut(\G_a)$ with coefficients in the comodule $H\F_2P_0 MO$.
 \begin{theorem}
-The action of $\InternalAut(\G_a)$ on $\Coord(\G_a)$ is free.
+The action of $\InternalAut_1(\G_a)$ on $\Coord_1(\G_a)$ is free, where $\InternalAut_1(\G_a)$ is defined by the kernel sequence \[0 \to \InternalAut_1(\G_a) \to \InternalAut(\G_a) \to \Gm \to 0.\]
 \end{theorem}
 \begin{proof}
-Consider a point $f \in \Coord(\G_a)(R)$, which in terms of the standard coordinate can be expressed as \[f(x) = \sum_{j=1}^\infty b_{j-1} x^j,\] where $b_0 = 1$.  Decompose this series as $f(x) = f_2(x) + f_r(x)$, with
+Consider a point $f \in \Coord_1(\G_a)(R)$, which in terms of the standard coordinate can be expressed as \[f(x) = \sum_{j=1}^\infty b_{j-1} x^j,\] where $b_0 = 1$.  Decompose this series as $f(x) = f_2(x) + f_r(x)$, with
 \begin{align*}
 f_2(x) & = \sum_{k=0}^\infty b_{2^k-1} x^{2^k}, &
 f_r(x) & = \sum_{j \ne 2^k} b_{j-1} x^j.
 \end{align*}
-Note that $f_2$ gives a point $f_2 \in \InternalAut(\G_a)(R)$, so we can de-scale by it to give a new coordinate $g(x) = f_2^{-1}(f(x))$ with analogous series $g_2(x)$ and $g_r(x)$.  Note that $g_2(x) = x$ and that $f_2$ is the unique point in $\InternalAut(\G_a)(R)$ that has this property.
+Note that $f_2$ gives a point $f_2 \in \InternalAut_1(\G_a)(R)$, so we can de-scale by it to give a new coordinate $g(x) = f_2^{-1}(f(x))$ with analogous series $g_2(x)$ and $g_r(x)$.  Note that $g_2(x) = x$ and that $f_2$ is the unique point in $\InternalAut_1(\G_a)(R)$ that has this property.
 \end{proof}
 
 \begin{corollary}
-$\pi_* MO = \F_2[b_j \mid j \ne 2^k - 1]$.
+$\pi_* MO = \F_2[b_j \mid j \ne 2^k - 1, j \ge 1]$ with $|b_j| = j$.
 \end{corollary}
 \begin{proof}
-Set $M = \F_2[b_j \mid j \ne 2^k - 1]$.  \todo{Compare this with the base change theorems from the previous day.}  It follows that $H\F_2P_0(MO)$ has amplitude $0$:
+Set $M = \F_2[b_j \mid j \ne 2^k - 1]$.  \todo{Compare this with the base change theorems from the previous day.}  It follows from the above that the $\InternalAut_1(\G_a)$--cohomology of $H\F_2P_0(MO)$ has amplitude $0$:\todo{Maybe you should justify the step that looks like reassociation of the tensor and cotensor products. You almost definitely proved this on the previous day.}
 \begin{align*}
 \Cotor_{\mathcal A_*}^{*, *}(\F_2, H\F_2P_0(MO)) & = \Cotor_{\mathcal A_*}^{*, *}(\F_2, \mathcal A_* \otimes_{\F_2} M) \\
 & = \F_2 \cotensor_{\mathcal A_*} (\mathcal A_* \otimes_{\F_2} M) \\
 & = \F_2 \otimes_{\F_2} M = M.
 \end{align*}
-Since the Adams spectral sequence \[H^*_{\mathrm{gp}}(\InternalAut(\G_a); H\F_2P_0(MO)) \Rightarrow \pi_* MO\] is concentrated on the $0$--line, it collapses.  We thus deduce \[\pi_* MO = \F_2[b_j \mid j \ne 2^k-1]. \qedhere\]
+Since the Adams spectral sequence \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); H\F_2P_0(MO)) \Rightarrow \pi_* MO\] is concentrated on the $0$--line, it collapses.  Using the residual $\Gm$--action to infer the grading, we thus deduce \[\pi_* MO = \F_2[b_j \mid j \ne 2^k-1]. \qedhere\]
 \end{proof}
 
 This is pretty remarkable: some big statement about manifold geometry came down to understanding how we could reparametrize a certain formal group, itself a (fairly simple) purely algebraic problem.  We could close here, but there's an easy homotopical consequence of this fact that is worth recording before we leave:
@@ -631,6 +631,6 @@ We have a $\pi_*$--injection $MO \to H\F_2 \sm MO$.  Pick an $\F_2$--basis $\{v_
 Just using that $\pi_* MO$ is connective and $\pi_0 MO = \F_2$, we can produce a ring spectrum map $MO \to H\F_2$.  What we've learned is that this map has a splitting: $MO$ is also an $H\F_2$--algebra.
 \end{remark}
 
-\todo{Should you eventually mention the stable cooperations $MO^{MO}$?  Rather than coming with a specified logarithm, it's an isomorphism between any pair of additive formal groups --- or, I suppose, a pair of logarithms.}
+\todo[inline]{Should you eventually mention the stable cooperations $MO^{MO}$?  Rather than coming with a specified logarithm, it's an isomorphism between any pair of additive formal groups --- or, I suppose, a pair of logarithms.}
 
 
